--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Dashboard Page</h1>
-    <!-- Your content here -->
+    <h1>Login Nice</h1>
     <script src="script.js"></script>
 </body>
 </html>
