--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -7,8 +7,7 @@
     <title>Dashboard Page</title>
 </head>
 <body>
-    <h1>Dashboard Page</h1>
-    <h1>Login Nice</h1>
+    <h1>HEHE im done</h1>
     <script src="script.js"></script>
 </body>
 </html>
