--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>You So Cool</h1>
+    <h1>You're So Cool</h1>
     <div class="button-container">
       <a href="/logout" class="button">Logout</a>
     </div>
